tests/transpiler/x/hs/cross_join.error
run: exit status 1

/workspace/mochi/tests/transpiler/x/hs/cross_join.hs:31:31: error:
    • Couldn't match type ‘Int’ with ‘[Char]’
        arising from selecting the field ‘id’
    • In the ‘orderId’ field of a record
      In the expression:
        GenType3
          {orderId = o.id, orderCustomerId = o.customerId,
           pairedCustomerName = c.name, orderTotal = o.total}
      In the expression:
        [GenType3
           {orderId = o.id, orderCustomerId = o.customerId,
            pairedCustomerName = c.name, orderTotal = o.total} |
           o <- orders, c <- customers]
   |
31 | result = [GenType3 {orderId = o.id, orderCustomerId = o.customerId, pairedCustomerName = c.name, orderTotal = o.total} | o <- orders, c <- customers]
   |                               ^^^^

/workspace/mochi/tests/transpiler/x/hs/cross_join.hs:31:55: error:
    • Couldn't match type ‘Int’ with ‘[Char]’
        arising from selecting the field ‘customerId’
    • In the ‘orderCustomerId’ field of a record
      In the expression:
        GenType3
          {orderId = o.id, orderCustomerId = o.customerId,
           pairedCustomerName = c.name, orderTotal = o.total}
      In the expression:
        [GenType3
           {orderId = o.id, orderCustomerId = o.customerId,
            pairedCustomerName = c.name, orderTotal = o.total} |
           o <- orders, c <- customers]
   |
31 | result = [GenType3 {orderId = o.id, orderCustomerId = o.customerId, pairedCustomerName = c.name, orderTotal = o.total} | o <- orders, c <- customers]
   |                                                       ^^^^^^^^^^^^

/workspace/mochi/tests/transpiler/x/hs/cross_join.hs:31:111: error:
    • Couldn't match type ‘Int’ with ‘[Char]’
        arising from selecting the field ‘total’
    • In the ‘orderTotal’ field of a record
      In the expression:
        GenType3
          {orderId = o.id, orderCustomerId = o.customerId,
           pairedCustomerName = c.name, orderTotal = o.total}
      In the expression:
        [GenType3
           {orderId = o.id, orderCustomerId = o.customerId,
            pairedCustomerName = c.name, orderTotal = o.total} |
           o <- orders, c <- customers]
   |
31 | result = [GenType3 {orderId = o.id, orderCustomerId = o.customerId, pairedCustomerName = c.name, orderTotal = o.total} | o <- orders, c <- customers]
   |                                                                                                               ^^^^^^^

/workspace/mochi/tests/transpiler/x/hs/cross_join.hs:37:9: error:
    • Couldn't match type ‘[]’ with ‘IO’
      Expected: IO Char
        Actual: [Char]
    • In a stmt of a 'do' block:
        putStrLn "Order"
          ++
            " "
              ++
                show entry.orderId
                  ++
                    " "
                      ++
                        "(customerId:"
                          ++
                            " "
                              ++
                                show entry.orderCustomerId
                                  ++
                                    " "
                                      ++
                                        ", total: $"
                                          ++
                                            " "
                                              ++
                                                show entry.orderTotal
                                                  ++
                                                    " "
                                                      ++
                                                        ") paired with"
                                                          ++ " " ++ show entry.pairedCustomerName
      In the expression:
        do putStrLn "Order"
             ++
               " "
                 ++
                   show entry.orderId
                     ++
                       " "
                         ++
                           "(customerId:"
                             ++
                               " "
                                 ++
                                   show entry.orderCustomerId
                                     ++
                                       " "
                                         ++
                                           ", total: $"
                                             ++
                                               " "
                                                 ++
                                                   show entry.orderTotal
                                                     ++
                                                       " "
                                                         ++
                                                           ") paired with"
                                                             ++ " " ++ show entry.pairedCustomerName
      In the first argument of ‘mapM_’, namely
        ‘(\ entry
            -> do putStrLn "Order"
                    ++
                      " "
                        ++
                          show entry.orderId
                            ++
                              " "
                                ++
                                  "(customerId:"
                                    ++
                                      " "
                                        ++
                                          show entry.orderCustomerId
                                            ++
                                              " "
                                                ++
                                                  ", total: $"
                                                    ++
                                                      " "
                                                        ++
                                                          show entry.orderTotal
                                                            ++
                                                              " "
                                                                ++
                                                                  ") paired with"
                                                                    ++
                                                                      " "
                                                                        ++
                                                                          show
                                                                            entry.pairedCustomerName)’
   |
37 |         putStrLn "Order" ++ " " ++ show entry.orderId ++ " " ++ "(customerId:" ++ " " ++ show entry.orderCustomerId ++ " " ++ ", total: $" ++ " " ++ show entry.orderTotal ++ " " ++ ") paired with" ++ " " ++ show entry.pairedCustomerName
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
